# reii_imgui

./: .gitignore  Blender281GenerateMeshHeaders.py  Blender281SeamsFromIslands.py  CMakeLists.txt  cimgui.h  imgui.glsl  imgui.h  imgui.lib  libglfw.so.3.3  main.cpp  mesh_indices.h  mesh_vertices.h  reii.c  reii.h  vs2012.vcxproj
imgui/: build_gcc.sh  build_vs.bat  cimgui.h
